std::vector は push_back() でメモリアドレス変わっちゃうから駄目だって・・・
git-svn-id: http://svn.sourceforge.jp/svnroot/open-mgl/MGL/trunk@1304 6d62ff88-fa28-0410-b5a4-834eb811a934

--- a/mgllib-test/af2-test/af2_test_VC90.vcproj
+++ b/mgllib-test/af2-test/af2_test_VC90.vcproj
@@ -217,7 +217,7 @@
 			Filter="cpp;c;cxx;rc;def;r;odl;idl;hpj;bat"
 			>
 			<File
-				RelativePath=".\af2_test.cpp"
+				RelativePath=".\control_array_test.cpp"
 				>
 			</File>
 		</Filter>
@@ -242,6 +242,10 @@
 				>
 			</File>
 			<File
+				RelativePath="..\AGH\include\agh_ControlArray.h"
+				>
+			</File>
+			<File
 				RelativePath="..\AGH\include\agh_ControlBase.h"
 				>
 			</File>
@@ -263,6 +267,18 @@
 			</File>
 			<File
 				RelativePath="..\AGH\include\agh_Factory.h"
+				>
+			</File>
+			<File
+				RelativePath="..\AGH\include\agh_Keyboard.h"
+				>
+			</File>
+			<File
+				RelativePath="..\AGH\include\agh_KeyCode.h"
+				>
+			</File>
+			<File
+				RelativePath="..\AGH\include\agh_Mouse.h"
 				>
 			</File>
 			<File
