CAugust2dSquare2 を実装してみた。（試してはいない） その他コメントレベルのdetail fix とか
git-svn-id: http://svn.sourceforge.jp/svnroot/open-mgl/MGL/trunk@1390 6d62ff88-fa28-0410-b5a4-834eb811a934

--- a/mgllib/mgllib_VC90.vcproj
+++ b/mgllib/mgllib_VC90.vcproj
@@ -2340,6 +2340,14 @@
 				Name="Ver 2"
 				>
 				<File
+					RelativePath=".\src\august\August2dSquare2.cpp"
+					>
+				</File>
+				<File
+					RelativePath=".\src\august\August2dSquare2.h"
+					>
+				</File>
+				<File
 					RelativePath=".\src\august\AugustCommon2.cpp"
 					>
 				</File>
@@ -2795,19 +2803,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3d8caps.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3d8caps.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3d8types.h"
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3d8caps.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3d8types.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3d8types.h"
 				>
 			</File>
 			<File
@@ -2819,15 +2827,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8core.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3dx8core.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8effect.h"
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8core.h"
 				>
 			</File>
 			<File
@@ -2835,7 +2839,7 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8math.h"
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8effect.h"
 				>
 			</File>
 			<File
@@ -2843,11 +2847,15 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8math.inl"
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8math.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3dx8math.inl"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8math.inl"
 				>
 			</File>
 			<File
@@ -2859,19 +2867,19 @@
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8shape.h"
-				>
-			</File>
-			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3dx8shape.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8tex.h"
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8shape.h"
 				>
 			</File>
 			<File
 				RelativePath="..\..\..\..\..\..\Program Files\Microsoft DirectX 9.0 SDK (October 2004)\Include\d3dx8tex.h"
+				>
+			</File>
+			<File
+				RelativePath="..\..\..\..\..\..\dxsdk90b\Include\d3dx8tex.h"
 				>
 			</File>
 			<File
@@ -2923,11 +2931,11 @@
 				>
 			</File>
 			<File
-				RelativePath="..\MSL\include\msl_ra_list.h"
+				RelativePath="..\..\MSL\trunk\MSL\header\msl_ra_list.h"
 				>
 			</File>
 			<File
-				RelativePath="..\..\MSL\trunk\MSL\header\msl_ra_list.h"
+				RelativePath="..\MSL\include\msl_ra_list.h"
 				>
 			</File>
 			<File
